# ARM7TDMI-Disassembler

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  launch.vs.json
demos/example/: dump.txt  example.rom  overrides.txt
include/totr/disassembler/: ArmDisasm.hpp  Common.hpp  FileUtil.hpp  InstructionProbe.hpp  ThumbDisasm.hpp
src/: main.cpp
src/disassembler/: ArmDisasm.cpp  Common.cpp  FileUtil.cpp  InstructionProbe.cpp  ThumbDisasm.cpp
